--- a/codigo/GestionHotelera/appsettings.json
+++ b/codigo/GestionHotelera/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        // Estos serian los datos de conexion a la base de datos del sistema de gestion hotelera.
+        // Se debe de cambiar la parte del servidor al ejecutarlo en otra computadora.
+        "ConexionClientes": "Server=EDUPC;Database=SistemaDeGestionHotelera;User Id=ClientesUserV1;Password=Cliente123;TrustServerCertificate=True;",
+        "ConexionAdministradores": "Server=EDUPC;Database=SistemaDeGestionHotelera;User Id=AdministradorUserV1;Password=Admin123;TrustServerCertificate=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
