--- a/codigo/GestionHotelera/GestionHotelera.csproj
+++ b/codigo/GestionHotelera/GestionHotelera.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\EmpresaRecreacionModels\ServiciosModels\" />
+    <Folder Include="Models\FiltrosBusquedaModel\" />
     <Folder Include="Models\UbicacionesModel\" />
   </ItemGroup>
 
