--- a/codigo/GestionHotelera/GestionHotelera.csproj
+++ b/codigo/GestionHotelera/GestionHotelera.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\FacturasYReservasModel\RespuestaReportesModels\" />
     <Folder Include="Models\UbicacionesModel\" />
   </ItemGroup>
 
